--- a/_config.yml
+++ b/_config.yml
@@ -7,37 +7,39 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
+locale                   : "en-CA"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Postdoctoral Fellow"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+name                     : &name "Yue Xu"
+description              : &description "Yue Xu is a third-year UHN-Prime postdoctoral fellow at the Leslie Dan Faculty of Pharmacy, University of Toronto. His research focuses on lipid and medicinal chemistry, with a strong emphasis on AI-guided high-throughput screening for lipid nanoparticle (LNP) development. He has contributed to high-impact publications and patents in the field.
+Yue obtained his PhD from China Pharmaceutical University and has extensive experience in interdisciplinary research, including lipid and medicinal chemistry, high-throughput screening, and AI-guided drug discovery."
+url                      : https://cpuxuyue.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "cpuxuyue/cpuxuyue.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "profile.jpg"
+  name             : "Yue Xu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Yue Xu is a third-year UHN-Prime postdoctoral fellow at the Leslie Dan Faculty of Pharmacy, University of Toronto. His research focuses on lipid and medicinal chemistry, with a strong emphasis on AI-guided high-throughput screening for lipid nanoparticle (LNP) development. He has contributed to high-impact publications and patents in the field.
+Yue obtained his PhD from China Pharmaceutical University and has extensive experience in interdisciplinary research, including lipid and medicinal chemistry, high-throughput screening, and AI-guided drug discovery."
+  location         : "Toronto, ON, Canada"
+  employer         : "University of Toronto"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "york.xu@utoronto.ca" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://https://scholar.google.com.hk/citations?user=xJDpDu4AAAAJ&hl"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0001-7672-9170"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
   scopus           : # URL
 
@@ -45,7 +47,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : #
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
@@ -82,7 +84,7 @@ publication_category:
   manuscripts:
     title: 'Journal Articles'    
   conferences:
-    title: 'Conference Papers'
+    title: 'Conference Proceedings'
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
